--- a/src/app/pages/indicator/selectdocument/selectdocument.component.html
+++ b/src/app/pages/indicator/selectdocument/selectdocument.component.html
@@ -18,4 +18,14 @@
     </p>
     <p>{{ fileName }}</p>
   </div>
+  <nz-content>
+    <div class="disclaimer">
+      <p class="disclaimerText">
+        <b>Disclaimer:</b> Uploading data here is safe. You can trust us with your info, because we never save it
+        anywhere. The algorithm uses your text to scan for keywords and retains access to it only so you can complete the procedure.
+        Your data is discarded as soon as you click ‘done’ in the 6th step, or if you refresh the window before you’re done.
+        We cannot access your information at any point.
+      </p>
+    </div>
+  </nz-content>
 </nz-upload>
