--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -46,17 +46,29 @@
       <th tooltip="Indicator" style="font-weight: bold;">
         Indicator
       </th>
-      <th nzShowSort nzWidth="100px" tooltip="Source">Source</th>
-      <th nzShowSort tooltip="Disaggregation" nzWidth="100px">
+      <th nzShowSort nzSortKey="source" nzWidth="100px" tooltip="Source">
+        Source
+      </th>
+      <th
+        nzShowSort
+        nzSortKey="disaggregation"
+        tooltip="Disaggregation"
+        nzWidth="100px"
+      >
         Disaggregation
       </th>
-      <th nzShowSort nzWidth="100px" tooltip="Thematic Area">
+      <th nzShowSort nzSortKey="themes" nzWidth="100px" tooltip="Thematic Area">
         Thematic Area
       </th>
-      <th nzShowSort tooltip="OECD DAC/CRS Code" nzWidth="100px">
+      <th
+        nzShowSort
+        nzSortKey="crsCode"
+        tooltip="OECD DAC/CRS Code"
+        nzWidth="100px"
+      >
         OECD DAC/CRS Code
       </th>
-      <th nzShowSort tooltip="SDG Code" nzWidth="100px">
+      <th nzShowSort nzSortKey="sdgCode" tooltip="SDG Code" nzWidth="100px">
         SDG Code
       </th>
       <th tooltip="Keyword Frequency" nzWidth="100px">
