<#5cmtzu> Add_text_To_Each_Step

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -1,7 +1,7 @@
 <nz-layout class="welcomeLayout">
   <section class="welcomeSection">
     <div nz-row class="welcomeMessage">
-      <h3 class=welcomeH3>
+      <h3 class=welcomeH3><!--Steps and welcome text added here-->
         Welcome to Logframe Lab
       </h3>
       <hr>
