--- a/src/app/manage-indicators/manage-indicators.component.html
+++ b/src/app/manage-indicators/manage-indicators.component.html
@@ -1,35 +1,55 @@
-<nz-table #indicators nzShowSizeChanger [nzData]="indicatorList" [nzFrontPagination]="false" [nzLoading]="true" [nzTotal]="totalRowCount"
-          [(nzPageIndex)]="pageIndex" [(nzPageSize)]="pageSize" (nzPageSizeChange)="search()" (nzPageIndexChange)="search()">
-  <thead>
+<button nz-button (click)="create()" nzType="primary"
+        style="margin-bottom: 30px; margin-top: 50px;" [disabled]="displayCrudModal" nzSize="default">Add
+  Indicator
+</button>
+<nz-table #indicators nzShowSizeChanger nzBordered [nzData]="indicatorList" [nzFrontPagination]="false"
+          [nzLoading]="isLoading" [nzTotal]="totalRowCount"
+          [(nzPageIndex)]="page" [(nzPageSize)]="pageSize" (nzPageSizeChange)="search(true)"
+          (nzPageIndexChange)="search()" nzSize="small" [nzScroll]="{x: '1100px'}">
+  <thead (nzSortChange)="sort($event)">
   <tr>
-    <th>ID</th>
-    <th>Crs Code</th>
-    <th>Data Source</th>
-    <th>Description</th>
-    <th>Disaggregation</th>
-    <th>Keywords</th>
-    <th>Name</th>
-    <th>Sdg Code</th>
-    <th>Source</th>
-    <th>Source Verification</th>
-    <th>Themes</th>
-    <th>Level</th>
+    <th style="width: 1%">ID</th>
+    <th style="width: 2%">Crs Code</th>
+    <th style="width: 10%">Data Source</th>
+    <th style="width: 20%">Description</th>
+    <th style="width: 1%">Disaggregation</th>
+    <th style="width: 15%">Keywords</th>
+    <th style="width: 20%">Name</th>
+    <th style="width: 2%">Sdg Code</th>
+    <th style="width: 10%">Source</th>
+    <th style="width: 2%">Source Verification</th>
+    <th style="width: 15%">Themes</th>
+    <th style="width: 1%">Level</th>
+    <th style="width: 1%">Actions</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let ind of indicators.data">
     <td>{{ind.id}}</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>{{ind.crsCode}}</td>
+    <td>{{ind.dataSource}}</td>
+    <td>{{ind.description}}</td>
+    <td>{{ind.disaggregation}}</td>
+    <td>{{ind.keywords}}</td>
+    <td>{{ind.name}}</td>
+    <td>{{ind.sdgCode}}</td>
+    <td>{{ind.source}}</td>
+    <td>{{ind.sourceVerification}}</td>
+    <td>{{ind.themes}}</td>
+    <td>{{ind.level.name}}</td>
+    <td>
+      <div nz-row>
+        <div><a (click)="edit(ind)">Edit</a></div>
+        <div><a (click)="delete(ind)">Remove</a></div>
+      </div>
+    </td>
   </tr>
   </tbody>
 </nz-table>
+
+<app-crud-indicator [displayCrudModal]="displayCrudModal" (hideCrudModal)="hideCrudModal($event)"
+                    (indicatorAdded)="refreshIndicatorList()"
+                    (indicatorDeleted)="refreshIndicatorList()"
+                    (indicatorUpdated)="refreshIndicatorList()" [operation]="operation"
+                    [indicator]="indicator">
+</app-crud-indicator>
