add level sorting

--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -40,7 +40,7 @@
         [nzIndeterminate]="isIndeterminate"
         (nzCheckedChange)="checkAll($event)"
       ></th>
-      <th tooltip="Indicator level" nzWidth="100px">
+      <th nzShowSort nzSortKey="level" tooltip="Indicator level" nzWidth="100px">
         Level
       </th>
       <th tooltip="Indicator" style="font-weight: bold;">
