--- a/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.html
+++ b/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.html
@@ -1,4 +1,4 @@
-<div style="margin: 50px;">
+<div class="filterContent">
   <div class="flex-container">
     <div>
       <label>Themes:</label><br />
@@ -47,5 +47,6 @@
       <label>Frequency of Keywords:</label><br />
       <nz-slider [nzTooltipVisible]="'default'"></nz-slider>
     </div>
+    <i class = "filterIcon" nz-icon nzType="filter" nzTheme="outline"></i>
   </div>
 </div>
