--- a/src/app/pages/indicator/scandocument/scandocument.component.html
+++ b/src/app/pages/indicator/scandocument/scandocument.component.html
@@ -1,4 +1,5 @@
-<div style="margin: 50px;">
+<div 
+class = "progressComponent">
   <div *ngIf="!isUploaded">
     <h2>Uploading ...</h2>
     <nz-progress
