--- a/src/app/dialog/dialog.component.css
+++ b/src/app/dialog/dialog.component.css
@@ -10,7 +10,24 @@
   opacity: .5; 
 }
 .dialog {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)),url(src\assets\PopUpImage.png);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-repeat: no-repeat;
+  background-size: 54rem 32rem;
+  border-radius:2.2rem;
+  z-index: 1000;
+  position: fixed;
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
+  max-height: 32rem;
+  max-width: 54rem;
+  width: 80%;
+  height: 80%;
+  background-color: #fff;
+  padding: 2rem;
+  /* background-repeat: no-repeat;
   background-size: 100% 10px;
   background-image: linear-gradient(to right, rgb(135, 17, 168)  0%, rgba(0,212,255,1) 100%);
   border-radius:10px;
@@ -30,7 +47,7 @@
   padding-right: 40px;
   padding-left: 40px;
   padding-bottom: 20px;
-  box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12); */
 }
 
 @media (min-width: 768px) {
@@ -39,44 +56,103 @@
   }
 }
 .dialog__close-btn {
-  font-family: 'Times New Roman', Times, serif;
-  border: none;
-  background: none;
-  color: #575656;
-  opacity: .7;
   position: absolute;
   top: 30px;
   right: 40px;
-  font-size: 25px;
-  padding: 0px;
+  font-family: montserrat, sans-serif;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  border: none;
+  background: none;
+  padding: 0px; 
+  line-height: 29px;
+  display: flex;
+  color: #453457;
 }
 .dialog__title{
+  margin-bottom: 0;
   text-align: center;
-  font-size: 35px;
+  font-size: 1.6rem;
   padding-top: 0px;
+  padding-bottom: 0rem;
+  text-transform: uppercase;
+  color:#453457;
+}
+.dialog__information{
+  padding-left: 8.5rem;
+  padding-right: 8.5rem;
+  font-family: montserrat, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #453457;
+}
+.dialog__howTo{
+  margin-top: 1.5rem;
+  margin-bottom: .3rem;
+  text-align: center;
+  font-family: montserrat, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.15rem;
+  line-height: 22px;
+  text-transform: uppercase;
+
+/* Purple */
+
+color: #453457;
 }
 .dialog__video{
+  padding-top: 0;
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  height: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 27.25rem;
+  height: 14.375rem;
+  background: #F2F2F2;
+  /* position: relative;
+  padding-bottom: 56.25%; /* 16:9 
+  height: 0; */
 }
-.dialog__video iframe {
+/* .dialog__video iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   padding: 0px;
-}
-.dialog__about{
+} */
+/* .dialog__about{
   text-align: center;
   opacity: .8;
   color: #808080;
   font-weight: 550;
   padding-top:20px;
   padding-bottom: 0px;
-}  
+}   */
 .dialog__lower-close-btn {
+  position: absolute;
+  width: 90px;
+  height: 30px;
+  right: 25rem;
+  top: calc(50% - 30px/2 + 222px);
+  background: #453457;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 15px;
+  font-family:montserrat, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+/* .dialog__lower-close-btn {
   color: rgb(231, 222, 222);
   background-color: rgb(108, 76, 184);
   border-radius: 3px;
@@ -88,4 +164,4 @@
   position: absolute;
   bottom: 30px;
   right: 40px;
-}
+} */
