--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -1,21 +1,139 @@
 .content-section {
-  width: 80%;
-  margin: 15px auto;
+  position: absolute;
+  max-width: 61.5rem;
+  padding: 10px;
+  width: 984px;
+  height: 56px;
+  left: 299px;
+  top: 155px;
+  border: 2px solid #F2F2F2;
 }
 
 .steps-content {
   margin-top: 16px;
-  border: 1px dashed #e9e9e9;
+  //border: 1px dashed #e9e9e9;
   border-radius: 6px;
-  background-color: #fafafa;
+  //background-color: #fafafa;
   //min-height: 300px;
   text-align: center;
 }
 
 .steps-action {
-  margin-top: 24px;
+  // margin-top: 24px;
+  display: inline;
+  position: relative;
+  left: 25rem;
+  top: 23rem;
 }
-.welcomeLayout{
+/*
+@media only screen and (max-width: 48.5rem) {
+  .steps-action {
+    // margin-top: 24px;
+    display: inline;
+    position: absolute;
+    left: 35%;
+    top: 55rem;
+    z-index: 1;
+  }
+}
+*/
+nz-step.stepIcon{
+  color: red !important;
+}
+.steps-button{
+  background: #453457;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 15px;
+  padding: 0 1.5rem 0 1.5rem;
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+
+/* White */
+
+color: #FFFFFF;
+}
+.stepIcon{
+  position: relative;
+  top: 1rem;
+  left: 5rem;
+  background: #A5C2AE;
+  padding: .3rem;
+  border-radius: .6rem;
+  font-size: 1.6rem;
+  color: #FFFFFF;
+  margin: 1rem 0 1rem 0;
+}
+  .stepSection{
+    position: absolute;
+    left: 5rem;
+    top: 10rem;
+    width: 12.5rem;
+    height: 348px;
+    border-radius: .6rem;
+    box-shadow: .25rem .35rem .1625rem #00000029;
+    max-width: 30rem;
+    background: #453457;
+  }
+  /*
+  @media only screen and (max-width: 48.5rem) {
+    .stepSection{
+      position: absolute;
+      left: 50%;
+      margin-left: -80px;
+      width: 12.5rem;
+      height: 348px;
+      border-radius: .6rem;
+      box-shadow: .25rem .35rem .1625rem #00000029;
+      max-width: 30rem;
+      background: #453457;
+    }
+  }
+  */
+  .stepInfo{
+    margin: auto;
+    font-family:montserrat, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1rem;
+    line-height: 17px;
+    background: #453457;
+    color: white;
+    padding: 1.25rem;
+    border-radius: .6rem;
+  }
+  .stepPara{
+    margin-bottom: 0;
+  }
+  // #step1{
+  //   position: relative;
+  // }
+  // #step2{
+  //   position: relative;
+  //   right: 20%;
+  // }
+  // #step3{
+  //   position: relative;
+  //   right: 5%;
+  // }
+  // #step4{
+  //   position: relative;
+  //   left: 9.75%;
+  // }
+  // #step5{
+  //   position: relative;
+  //   left: 25%;
+  // }
+  // #step6{
+  //   position: relative;
+  // }
+  /*.welcomeLayout{
   background-color:  white;
   align-items: center;
   padding: 3rem;
@@ -44,46 +162,4 @@
   border-top-left-radius: 15px;
   box-shadow: .25rem .35rem .1625rem #00000029;
   max-width: 48rem;
-  }
-  .stepSection{
-    padding: 0rem 2rem 2rem 2rem;
-  }
-  .stepInfo{
-    margin: auto;
-    
-    font-family:montserrat, sans-serif;
-    font-weight: 500;
-    line-height: 1.25rem;
-    font-size: 1.25rem;
-    background-color:#1890ff;
-    color: white;
-    padding: .5rem 1rem .5rem 1rem;
-    border-radius: 1rem;
-    box-shadow: .25rem .35rem .1625rem #00000029;
-    max-width: 30rem;
-  }
-  .stepPara{
-    margin-bottom: 0;
-  }
-  // #step1{
-  //   position: relative;
-  // }
-  // #step2{
-  //   position: relative;
-  //   right: 20%;
-  // }
-  // #step3{
-  //   position: relative;
-  //   right: 5%;
-  // }
-  // #step4{
-  //   position: relative;
-  //   left: 9.75%;
-  // }
-  // #step5{
-  //   position: relative;
-  //   left: 25%;
-  // }
-  // #step6{
-  //   position: relative;
-  // }
+  }*/
