--- a/src/app/pages/indicator/scandocument/scandocument.component.scss
+++ b/src/app/pages/indicator/scandocument/scandocument.component.scss
@@ -3,3 +3,12 @@
   margin-bottom: 8px;
   display: inline-block;
 }
+.progressComponent{
+  margin: 50px;
+  position: relative;
+  top: -3rem;
+  left: 0rem;
+  padding: 2rem 6rem;
+  background-color: rgba(242, 242, 242, 0.7);
+  border: .25rem dashed #C6C6C5;
+}
