--- a/src/app/pages/indicator/scanresult/scanresult.component.scss
+++ b/src/app/pages/indicator/scanresult/scanresult.component.scss
@@ -2,3 +2,15 @@
   background-color: #A5C2AE;
 }
 
+.indicatorContent{
+  position: relative;
+  left: -.7rem;
+  top: -2rem;
+  background-color: rgba(242, 242, 242, 0.7);
+  border: .25rem dashed #C6C6C5;
+}
+.warning{
+  position: absolute;
+  width: 100%;
+  z-index: 100;
+}
