--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -55,9 +55,11 @@
     <button nz-button class="steps-button" nzType="default" (click)="pre()" *ngIf="current > 0">
       <span>Previous</span>
     </button>
-    <!-- Removed [disabled]="!isNext" from below button for MX -->
+    <!-- Remove [disabled]="!isNext" and hidden]="!isNext" from below button for MX 
+          added hidden to hide the button when nothing is uploaded-->
     <button
-      
+    [disabled]="!isNext"
+    [hidden]="!isNext"
       nz-button
       class ="steps-button"
       nzType="default"
