--- a/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.html
+++ b/src/app/pages/indicator/indicatorfilters/indicatorfilters.component.html
@@ -47,6 +47,9 @@
       <label>Frequency of Keywords:</label><br />
       <nz-slider [nzTooltipVisible]="'default'"></nz-slider>
     </div>
+  </div>
+    <div class="filterText">
     <i class = "filterIcon" nz-icon nzType="filter" nzTheme="outline"></i>
+    <p style="padding: .5rem;">Themes</p>
   </div>
 </div>
