--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -57,10 +57,10 @@
     </button>
     <!-- Remove [disabled]="!isNext" and hidden]="!isNext" from below button for MX 
           added hidden to hide the button when nothing is uploaded
-        [disabled]="!isNext"
-    [hidden]="!isNext"-->
+-->
     <button
-    
+      [disabled]="!isNext"
+      [hidden]="!isNext"
       nz-button
       class ="steps-button"
       nzType="default"
