--- a/src/app/pages/indicator/scandocument/scandocument.component.scss
+++ b/src/app/pages/indicator/scandocument/scandocument.component.scss
@@ -4,10 +4,7 @@
   display: inline-block;
 }
 .progressComponent{
-  margin: 50px;
-  position: relative;
-  top: -3rem;
-  left: 0rem;
+  padding: 16px 0;
   padding: 2rem 6rem;
   background-color: rgba(242, 242, 242, 0.7);
   border: .25rem dashed #C6C6C5;
