--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -1,4 +1,4 @@
-<section class =stepSection>
+<div class =stepSection>
   <i nz-icon nzType="question" nzTheme="outline" class="stepIcon"></i>
 <div id="step1" class="stepInfo" *ngIf="current ===  0">
   <p class="stepPara"> First, either upload a single Word document here (.doc or .docx) or start from scratch,
@@ -41,7 +41,7 @@
       project – and for reporting to funders.
     </p>
   </div>
-</section>
+</div>
 <div class="content-section">
   <nz-steps [nzCurrent]="current">
     <nz-step nzTitle="UPLOAD"  nzIcon="folder" ></nz-step>
