--- a/src/app/pages/indicator/scanresult/scanresult.component.scss
+++ b/src/app/pages/indicator/scanresult/scanresult.component.scss
@@ -8,9 +8,12 @@
   top: -2rem;
   background-color: rgba(242, 242, 242, 0.7);
   border: .25rem dashed #C6C6C5;
+  height: 37.5rem;
 }
 .warning{
-  position: absolute;
+  position: relative;
+  overflow-wrap: anywhere;
+  overflow: scroll;
   width: 100%;
   z-index: 100;
 }
