[#62tgau] - Allow for range in keyword frequency in Results tab

--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -118,6 +118,9 @@
         <nz-slider
           (nzOnAfterChange)="onAfterChange($event)"
           [nzTooltipVisible]="'default'"
+          [nzRange]='true'
+          [nzMin]='sliderMinValue'
+          [nzMax]='sliderMaxValue'
         ></nz-slider>
       </th>
     </tr>
